# TopicNet

./: .editorconfig  .gitignore  .gitmodules  data.json  index.html  main.py  package-lock.json  package.json  response.json
backend/: .gitignore  api.py  app.py  extract.py  log_config.yaml  main.py  models.py  pyproject.toml  service.py  summarize.py  topicnet.py
backend/3_embed/: __init__.py  _base.py  _no_sentences_to_encode_error.py  _sentence_transformers.py
backend/_2_clean/: __init__.py  _method.py
backend/_3_embed/: __init__.py  _embedder.py  _method.py
backend/_4_reduce/: _base.py
backend/_5_cluster/: __init__.py  _clusterer.py  _method.py  _utils.py
backend/alembic/: env.py
backend/alembic/versions/: 10d7305c4979_add_new_columns_user_id_name_and_type_.py  1e19e6d4e873_id_column_of_document_should_increment_.py  21fbc3bf2f45_combine_topic_and_content_columns_in_.py  26c1de07a3e8_define_user_and_session_tables.py  473c703c96e6_drop_all_tables.py  4b3529eb766d_modify_document_node_and_sentence_.py  5243d9f00080_explicitly_define_nullable_columns_as_.py  b3da088a266e_create_composite_primary_keys_out_of_id_.py  dc1511c44ccd_add_document_node_and_sentence_models.py
backend/app/: .env  main.py
backend/app/core/: __init__.py  aws.py  aws_.py  config.py  config_.py  database.py  logging.py  (+1 more)
backend/auth/: app.js  package-lock.json
backend/config/: db_config.yaml  log_config.yaml
backend/embed/: _base.py
backend/generate/: main.py
backend/mindmap-gen/: app.py
backend/mindmap-generation/: app.py  models.py
backend/scripts/: postgres-setup.zsh
(+272 files in other folders)
